--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "firebase": "^8.4.1",
+    "fontawesome-svelte": "^2.0.1",
     "rxfire": "^4.0.0",
     "rxjs": "^6.6.7",
     "sirv-cli": "^1.0.0"
