--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "rollup": "^2.3.4",
@@ -26,6 +27,7 @@
     "fontawesome-svelte": "^2.0.1",
     "rxfire": "^4.0.0",
     "rxjs": "^6.6.7",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-preprocess": "^4.7.2"
   }
 }
